--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,22 +4,30 @@
     border-color: 1px black;
     border-style: solid;
     margin: auto;
+    margin-top: 40px;
     width: 50%;
-    padding: 10px;
+    padding: 20px;
 }
 
 /* header */
 .header {
-    position: relative;
-    border-style: solid;
+    width: 100%;
+    height: 50px;
+    background-color: #ffffff;
+    border-color: #cccccc;
+}
+#name {
+    display: block;
+    float: left;
+    width: 300px;
     font-size: 30px;
 }
 
 /* links */
-.links {
+#links {
+    display: block;
     float: right;
-    font-size: 20px;
-    padding: 30px;
+    font-size: 30px;
 }
 
 
@@ -27,9 +35,10 @@
 /* "About Me" should this have bottom border? */
 h2{
     color: #777777;
-    border-bottom: 3 px #777777;
-    border-style: solid;
+    border-bottom: 3px solid #777777;
     font-size: 30px;
+    padding-bottom: 20px;
+    margin-bottom: 30px;
 }
 
 
