--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,44 +1,96 @@
 
+.mainbox{
+    <body background=
+    padding: 10px;
+
+}
 .box{
-    background-color: #ffffff;
-    border-color: 1px black;
-    border-style: solid;
+    background-color: white;
     margin: auto;
+    position: fixed;
+    left: 10%;
+    right: 10%;
     margin-top: 40px;
-    width: 50%;
+    margin-bottom: 40px;
+    width: auto;
+    height: auto;
     padding: 20px;
+    border-style: solid;
+    border-color: grey;
+    border-width: 1px;
 }
 
 /* header */
+
+
 .header {
     width: 100%;
+    position: aboslute;
+    padding-bottom: 50px;
+    left: 0;
+    top: 0;
     height: 50px;
     background-color: #ffffff;
     border-color: #cccccc;
+    border-bottom: 1px solid grey;
+    
 }
 #name {
-    display: block;
-    float: left;
+    background-color: #4aaaa5;
+    color: white;
+    text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    position: absolute;
+    left: 10%;
     width: 300px;
-    font-size: 30px;
+    height: 100px;
+    font-size: 25px;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+    border-bottom: 0px;
+
 }
 
 /* links */
-#links {
-    display: block;
-    float: right;
-    font-size: 30px;
+.links {
+    width: 600px;
+    margin: auto;
+    height: 50px;
+    position: absolute;
+    font-size: 18px;
+    text-align: center;
+    top: 30px;
+
+
 }
-
-
+    #about {
+    display: inline-block;
+    background-color: white;
+    width: 100px;
+    }
+    #portfolio {
+    display: inline-block;
+    background-color: white;
+    width: 100px;
+    }
+    #contact {
+    display: inline-block;
+    background-color: white;
+    width: 100px;
+    }
 
 /* "About Me" should this have bottom border? */
 h2{
+    font-family: Georgia, 'Times New Roman', Times, serif;
     color: #777777;
     border-bottom: 3px solid #777777;
     font-size: 30px;
     padding-bottom: 20px;
     margin-bottom: 30px;
+    padding-top: 0px;
+    margin-top: 0px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 
@@ -46,7 +98,7 @@ h2{
 /* picture (opposite height & width bc rotated) */
 img {
     border-radius: 8px;
-    padding: 10px;
+    padding: 20px;
     float: left;
     height: 250px;
     width: 300px;
@@ -65,5 +117,26 @@ p {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     color: #777777;
-    padding: 10px;
+    padding: 20px;
 }
+
+
+footer { 
+    display: block;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 70px;
+    background-color: red;
+    color: white;
+    border-top: 6px solid black;
+    text-align: center;
+    }
+
+
+
+
+
+
+    
