--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,30 +1,42 @@
+*{
+    margin:0;
+    padding:0;
+}
+
+body{
+    background-image: url(../images/gravel.png);
+    background-color: #ffffff;
+}
 
 .mainbox{
-    <body background=
-    padding: 10px;
+    width: 960px;
+    max-width: 960px;
 
-}
-.box{
-    background-color: white;
-    margin: auto;
-    position: fixed;
-    left: 10%;
-    right: 10%;
-    margin-top: 40px;
-    margin-bottom: 40px;
-    width: auto;
-    height: auto;
+    background-color: #ffffff;
+    font-family:"Open Sans", Helvetica, Arial, sans-serif;
+	font-weight:300;
+    font-size: 12px;
+    
+
     padding: 20px;
-    border-style: solid;
-    border-color: grey;
-    border-width: 1px;
+
+    top: 10 px;
+    width: 960px;
+    height: auto;
+	
+	color:#777;
+    margin: auto;
+    padding: 0;
+    position: relative;
+
 }
 
 /* header */
 
-
-.header {
+.top {
+    display: block;
     width: 100%;
+    margin: 0;
     position: aboslute;
     padding-bottom: 50px;
     left: 0;
@@ -32,54 +44,57 @@
     height: 50px;
     background-color: #ffffff;
     border-color: #cccccc;
-    border-bottom: 1px solid grey;
+    border-bottom: 3px solid grey;
+}
+
+.header {
+    width: 960px;
+    margin: auto;
+    position: aboslute;
+    padding-bottom: 50px;
+    left: 0;
+    top: 0;
+    height: 50px;
+    background-color: #ffffff;
+    border-color: #cccccc;
+    border-bottom: 3px solid grey;
     
 }
 #name {
     background-color: #4aaaa5;
     color: white;
     text-align: center;
+    justify-content: center;
     font-family: Georgia, 'Times New Roman', Times, serif;
     position: absolute;
-    left: 10%;
+    float: left;
     width: 300px;
     height: 100px;
-    font-size: 25px;
+    font-size: 20px;
     margin-bottom: 0px;
     padding-bottom: 0px;
     border-bottom: 0px;
-
 }
 
 /* links */
 .links {
-    width: 600px;
-    margin: auto;
-    height: 50px;
-    position: absolute;
-    font-size: 18px;
-    text-align: center;
-    top: 30px;
-
-
+   float: right;
+   margin-top: 50px;
 }
-    #about {
-    display: inline-block;
-    background-color: white;
-    width: 100px;
-    }
-    #portfolio {
-    display: inline-block;
-    background-color: white;
-    width: 100px;
-    }
-    #contact {
-    display: inline-block;
-    background-color: white;
-    width: 100px;
-    }
 
-/* "About Me" should this have bottom border? */
+a{
+     border-right: 1px solid grey;
+     padding: 0 20px;
+     font-size: 18px;
+}
+
+a:last-child {
+    border-right: none;
+    border-color: #ffffff;
+}
+
+
+/* "About Me" */
 h2{
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: #777777;
@@ -87,16 +102,20 @@ h2{
     font-size: 30px;
     padding-bottom: 20px;
     margin-bottom: 30px;
-    padding-top: 0px;
-    margin-top: 0px;
-    margin-left: 20px;
+    margin-top: 30px;
     margin-right: 20px;
+    text-align: left;
+    width: 960px;
+    padding-top: 20px;
+    position:relative;
+    top: 10 px;
+    display: block;
+
+    
 }
 
-
-
 /* picture (opposite height & width bc rotated) */
-img {
+#alina {
     border-radius: 8px;
     padding: 20px;
     float: left;
@@ -111,7 +130,7 @@ img {
     display: table;
 }
 
-p {
+.me {
     text-align: left;
     line-height: normal; 
     font-family: Arial, Helvetica, sans-serif;
@@ -120,8 +139,106 @@ p {
     padding: 20px;
 }
 
+/* CONTACT BOX */
 
-footer { 
+.container {
+    max-width: 960px;
+    margin: 0 auto;
+    position:relative;
+
+}
+
+#contact input[type="text"], #contact input[type="email"], #contact textarea, #contact button[type="submit"]{ 
+     font:400 12px/16px "Open Sans", Helvetica, Arial, sans-serif;
+ }
+
+#contact {
+	background: white;
+	padding:25px;
+    margin-top:25px;
+    margin-bottom: 50px;
+    margin-right: 0;
+    margin-left: 0;
+    max-width: 960px;
+}
+
+#contact h3 {
+	color: #F96;
+	display: block;
+	font-size: 30px;
+	font-weight: 100px;
+    padding-bottom: 10px;
+    padding-top: 0px;
+    margin-top: 0px;
+    margin-bottom: 20px;
+    border-bottom: 1px solid grey;
+    background-color: white;
+}
+
+fieldset {
+	border: medium;
+    margin-top: 0px;
+    margin-bottom: 10px;
+    padding: 0px;
+	width: 890px;
+}
+
+#contact input[type="text"], #contact input[type="email"], #contact textarea {
+	width:100%; 
+	border:1px solid #CCC;
+	background:#FFF;
+	margin: 0px; 
+	padding: 10px;
+}
+
+#contact input[type="text"]:hover, #contact input[type="email"]:hover, #contact input[type="tel"]:hover, #contact input[type="url"]:hover, #contact textarea:hover {
+	border:1px solid #AAA;
+}
+
+#contact textarea {
+	height:100px;
+	max-width:100%;
+    resize:none;
+}
+
+#contact button[type="submit"] {
+	width:15%;
+	border:none;
+	background:#4aaaa5;
+	color:#FFF;
+	margin:0px;
+	padding:10px;
+	font-size:15px;
+}
+
+#contact button[type="submit"]:hover {
+	background: grey;
+}
+
+
+.row {
+    float: left;
+}
+
+.row2 {
+  
+    float: left;
+}
+
+
+img {
+    padding: 20px;
+    margin: 0;
+    border-style: none;
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+}
+
+
+
+
+.footer { 
     display: block;
     position: fixed;
     left: 0;
@@ -134,6 +251,11 @@ footer {
     text-align: center;
     }
 
+h6{
+    text-align: center;
+    margin-top: 50px;
+    color: black;
+}
 
 
 
