--- a/contact.css
+++ b/contact.css
@@ -1,7 +1,7 @@
 * {
 	margin:0;
 	padding:0;
-	box-sizing:border-box;
+    box-sizing:border-box;
 }
 
 body {
@@ -10,7 +10,10 @@ body {
 	font-size: 12px;
 	line-height:30px;
 	color:#777;
-	background:#0CF;
+    background: green;
+    margin: 0;
+    padding: 0;
+    height:960px;
 }
 
 .header {
@@ -32,13 +35,13 @@ body {
     font-family: Georgia, 'Times New Roman', Times, serif;
     position: absolute;
     left: 25%;
+    top: 0%;
     width: 300px;
-    height: 100px;
+    height: 75px;
     font-size: 25px;
     margin-bottom: 0px;
     padding-bottom: 0px;
     border-bottom: 0px;
-
 }
 
 
@@ -47,15 +50,21 @@ body {
 	width:50%;
 	margin:0 auto;
     position:relative;
-    top: 100px;
+    top: 90px;
 }
 
-#contact input[type="text"], #contact input[type="email"], #contact textarea, #contact button[type="submit"] { font:400 12px/16px "Open Sans", Helvetica, Arial, sans-serif; }
+#contact input[type="text"], #contact input[type="email"], #contact textarea, #contact button[type="submit"]{ 
+     font:400 12px/16px "Open Sans", Helvetica, Arial, sans-serif;
+ }
 
 #contact {
 	background: white;
 	padding:25px;
-	margin:50px 0;
+    margin-top:25px;
+    margin-bottom: 50px;
+    margin-right: 0;
+    margin-left: 0;
+
   
 }
 
@@ -64,7 +73,8 @@ body {
 	display: block;
 	font-size: 30px;
 	font-weight: 100px;
-    padding: 10px;
+    padding-bottom: 10px;
+    padding-top: 0px;
     margin-top: 0px;
     margin-bottom: 20px;
     border-bottom: 1px solid grey;
@@ -76,7 +86,7 @@ fieldset {
 	border: medium;
     margin-top: 0px;
     margin-bottom: 10px;
-	min-width: 100%;
+
 	padding: 0px;
 	width: 100%;
 }
@@ -94,7 +104,7 @@ fieldset {
 }
 
 #contact textarea {
-	height:150px;
+	height:100px;
 	max-width:100%;
     resize:none;
 }
@@ -112,8 +122,6 @@ fieldset {
 #contact button[type="submit"]:hover {
 	background: grey;
 }
-
-
 
 
 footer { 
