--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,14 +8,15 @@ body{
     background-color: #ffffff;
 }
 
-.mainbox{
+.mainbox {
     width: 960px;
     max-width: 960px;
 
     background-color: #ffffff;
-    font-family:"Open Sans", Helvetica, Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 	font-weight:300;
-    font-size: 12px;
+    font-size: 14px;
+    line-height: 20px;
     
 
     padding: 20px;
@@ -28,6 +29,7 @@ body{
     margin: auto;
     padding: 0;
     position: relative;
+    border-style: 1px solid #dddddd;
 
 }
 
@@ -44,7 +46,7 @@ body{
     height: 50px;
     background-color: #ffffff;
     border-color: #cccccc;
-    border-bottom: 3px solid grey;
+    border-bottom: 1px solid grey;
 }
 
 .header {
@@ -57,7 +59,7 @@ body{
     height: 50px;
     background-color: #ffffff;
     border-color: #cccccc;
-    border-bottom: 3px solid grey;
+    border-bottom: 1px solid #cccccc;
     
 }
 #name {
@@ -74,18 +76,22 @@ body{
     margin-bottom: 0px;
     padding-bottom: 0px;
     border-bottom: 0px;
+    line-height: 100px;
 }
 
 /* links */
 .links {
    float: right;
    margin-top: 50px;
+   
 }
 
 a{
-     border-right: 1px solid grey;
+     border-right: 1px solid #cccccc;
      padding: 0 20px;
-     font-size: 18px;
+     font-size: 16px;
+     text-decoration: none;
+     font-family: Arial, Helvetica, sans-serif;
 }
 
 a:last-child {
@@ -98,20 +104,19 @@ a:last-child {
 h2{
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: #777777;
-    border-bottom: 3px solid #777777;
+    border-bottom: 1px solid #cccccc;
     font-size: 30px;
     padding-bottom: 20px;
     margin-bottom: 30px;
-    margin-top: 30px;
+    margin-top: 50px;
     margin-right: 20px;
     text-align: left;
     width: 960px;
-    padding-top: 20px;
+    padding-top: 30px;
     position:relative;
     top: 10 px;
     display: block;
-
-    
+    text-indent: 1em;
 }
 
 /* picture (opposite height & width bc rotated) */
@@ -136,7 +141,9 @@ h2{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     color: #777777;
-    padding: 20px;
+    padding: 10px;
+    margin-left: 25px;
+    line-height: 30px;
 }
 
 /* CONTACT BOX */
@@ -145,6 +152,7 @@ h2{
     max-width: 960px;
     margin: 0 auto;
     position:relative;
+    background-color: #ffffff;
 
 }
 
@@ -153,7 +161,7 @@ h2{
  }
 
 #contact {
-	background: white;
+	background: ffffff;
 	padding:25px;
     margin-top:25px;
     margin-bottom: 50px;
@@ -163,7 +171,8 @@ h2{
 }
 
 #contact h3 {
-	color: #F96;
+    color: #4aaaa5;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 	display: block;
 	font-size: 30px;
 	font-weight: 100px;
@@ -171,8 +180,8 @@ h2{
     padding-top: 0px;
     margin-top: 0px;
     margin-bottom: 20px;
-    border-bottom: 1px solid grey;
-    background-color: white;
+    border-bottom: 1px solid #dddddd;
+    background-color: #ffffff;
 }
 
 fieldset {
@@ -185,14 +194,14 @@ fieldset {
 
 #contact input[type="text"], #contact input[type="email"], #contact textarea {
 	width:100%; 
-	border:1px solid #CCC;
-	background:#FFF;
+	border:1px solid #cccccc;
+	background:#ffffff;
 	margin: 0px; 
 	padding: 10px;
 }
 
 #contact input[type="text"]:hover, #contact input[type="email"]:hover, #contact input[type="tel"]:hover, #contact input[type="url"]:hover, #contact textarea:hover {
-	border:1px solid #AAA;
+	border:1px solid #cccccc;
 }
 
 #contact textarea {
@@ -205,7 +214,7 @@ fieldset {
 	width:15%;
 	border:none;
 	background:#4aaaa5;
-	color:#FFF;
+	color:#ffffff;
 	margin:0px;
 	padding:10px;
 	font-size:15px;
@@ -218,11 +227,13 @@ fieldset {
 
 .row {
     float: left;
+    position: relative;
 }
 
 .row2 {
   
     float: left;
+    position: relative;
 }
 
 
@@ -235,8 +246,33 @@ img {
     overflow: hidden;
 }
 
+.trivia {
+    position: relative;
 
+}
 
+.rpg {
+    position: relative;
+}
+
+.hangman {
+    position: relative;
+}
+
+.text-block {
+    position: absolute;
+    width: 200px;
+    height: 40px;
+    bottom: 40px;
+    right: 20px;
+    background-color: #4aaaa5;
+    color: white;
+    padding-left: 0px;
+    padding-right: 0px;
+    font-size: 16px;
+    text-align: center;
+    line-height: 40px;
+}
 
 .footer { 
     display: block;
@@ -245,16 +281,17 @@ img {
     bottom: 0;
     width: 100%;
     height: 70px;
-    background-color: red;
+    background-color: #666666;
     color: white;
-    border-top: 6px solid black;
+    border-top: 6px solid #4aaaa5;
     text-align: center;
     }
 
 h6{
     text-align: center;
     margin-top: 50px;
-    color: black;
+    color: #ffffff;
+    text-emphasis: none;
 }
 
 
