--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,26 +11,30 @@ body{
 .mainbox {
     width: 960px;
     max-width: 960px;
-
     background-color: #ffffff;
     font-family: Arial, Helvetica, sans-serif;
 	font-weight:300;
     font-size: 14px;
     line-height: 20px;
-    
-
     padding: 20px;
-
     top: 10 px;
-    width: 960px;
-    height: auto;
-	
-	color:#777;
+	color:#777777;
     margin: auto;
     padding: 0;
     position: relative;
     border-style: 1px solid #dddddd;
 
+
+}
+
+
+.extrabox {
+        width: 960px;
+        margin-left: auto;
+        margin-right: auto;
+        border: 1px solid #dddddd;
+        object-fit: fill;
+    
 }
 
 /* header */
