--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -299,6 +299,12 @@ h6{
     text-emphasis: none;
 }
 
+@media only screen and (max-width: 600px) {
+    body {
+        background-color: lightblue;
+    }
+}
+
 
 
 
